<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView
            style="@style/Label"
            android:id="@+id/rekeningBedragLabel"
            android:text="@string/rekening_bedrag_label"  />


        <!--het invoerveld-->

        <EditText
            android:id="@+id/rekeningBedragEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/rekeningBedragLabel"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/rekeningBedragLabel"
            android:ems="8"
            android:inputType="numberDecimal"
            android:text="@string/rekening_bedrag"
            android:textSize="20sp" />

        <!-- fooi percentage -->

        <TextView
            android:id="@+id/procentLabel"
            style="@style/Label"
            android:layout_alignLeft="@+id/rekeningBedragLabel"
            android:layout_below="@+id/rekeningBedragLabel"
            android:text="@string/fooi_percentage_label"
            />




        <TextView
            style="@style/TextView"
            android:id="@+id/procentTextView"
            android:text="@string/fooi_percentage"
            android:layout_alignTop="@+id/procentLabel"
            android:layout_alignLeft="@+id/fooiTextView"
            android:layout_alignStart="@+id/fooiTextView" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/plus_knop"
            android:id="@+id/plus_knop"
            android:textSize="30sp"
            android:padding="0dp"
            android:layout_alignBottom="@+id/procentTextView"
            android:layout_toRightOf="@+id/fooiTextView"
            android:layout_toEndOf="@+id/fooiTextView" />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/min_knop"
            android:id="@+id/min_knop"
            android:textSize="30sp"
            android:padding="0dp"
            android:layout_alignTop="@+id/plus_knop"
            android:layout_alignRight="@+id/rekeningBedragEditText"
            android:layout_alignEnd="@+id/rekeningBedragEditText" />



        <!-- fooi bedrag -->

        <TextView
            android:id="@+id/fooiLabel"
            style="@style/Label"
            android:layout_alignLeft="@+id/procentLabel"
            android:layout_below="@+id/procentLabel"
            android:text="@string/fooi_bedrag_label"
            />

        <TextView
            style="@style/TextView"
            android:id="@+id/fooiTextView"
            android:layout_alignBaseline="@+id/fooiLabel"
            android:layout_alignLeft="@id/rekeningBedragEditText"
            android:text="@string/fooi_bedrag"
            />

        <!-- totaal bedrag -->

        <TextView
            style="@style/Label"
            android:id="@+id/totaalLabel"
            android:layout_alignLeft="@+id/fooiLabel"
            android:layout_below="@+id/fooiLabel"
            android:text="@string/totaal_bedrag_label"
            />

        <TextView
            style="@style/TextView"
            android:id="@+id/totaalTextView"
            android:layout_alignBaseline="@+id/totaalLabel"
            android:layout_alignLeft="@+id/fooiTextView"
            android:text="@string/totaal_bedrag" />
        <!--android:textSize="20sp"-->

        <!-- de scheidingslijn -->

        <!--afronding-->



        <!--<Button-->
        <!--android:id="@+id/berekenButton"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/pas_toe_knop"-->
        <!--android:layout_below="@id/bedragPerPersoonTextView"-->
        <!--android:layout_marginTop="30dp"  />-->


    </RelativeLayout>


</ScrollView>
