<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <TextView
            style="@style/Label"
            android:id="@+id/rekeningBedragLabel"
            android:text="@string/rekening_bedrag_label"  />


        <!--het invoerveld-->

        <EditText
            android:id="@+id/rekeningBedragEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/rekeningBedragLabel"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/rekeningBedragLabel"
            android:ems="8"
            android:inputType="numberDecimal"
            android:text="@string/rekening_bedrag"
            android:textSize="20sp" />

        <!-- fooi percentage -->

        <TextView
            android:id="@+id/procentLabel"
            style="@style/Label"
            android:layout_alignLeft="@+id/rekeningBedragLabel"
            android:layout_below="@+id/rekeningBedragLabel"
            android:text="@string/fooi_percentage_label"
            />

        <!--<TextView-->
        <!--android:id="@+id/procentTextView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBaseline="@+id/procentLabel"-->
        <!--android:layout_alignLeft="@id/rekeningBedragEditText"-->
        <!--android:layout_toRightOf="@+id/rekeningBedragLabel"-->
        <!--android:padding="5dp"-->
        <!--android:text="@string/fooi_percentage"-->
        <!--android:textSize="20sp" />-->

        <!--<Button-->
        <!--android:id="@+id/procentMinButton"-->
        <!--android:layout_width="45dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_alignBaseline="@+id/procentTextView"-->
        <!--android:layout_toRightOf="@+id/procentTextView"-->
        <!--android:layout_marginLeft="25dp"-->
        <!--android:text="@string/min_knop"-->
        <!--android:textSize="20sp" />-->

        <!--<Button-->
        <!--android:id="@+id/procentPlusButton"-->
        <!--android:layout_width="45dp"-->
        <!--android:layout_height="45dp"-->
        <!--android:layout_alignBaseline="@+id/procentMinButton"-->
        <!--android:layout_toRightOf="@+id/procentMinButton"-->
        <!--android:text="@string/plus_knop"-->
        <!--android:textSize="20sp" />-->



        <!--slider in plaats van knoppen-->
        <SeekBar
            android:id="@+id/procentSeekBar"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/procentLabel"
            android:layout_alignBottom="@id/procentLabel"
            android:layout_alignLeft="@id/rekeningBedragEditText"
            android:max="30"
            android:progress="15" />


        <TextView
            style="@style/TextView"
            android:id="@+id/procentTextView"
            android:layout_below="@id/rekeningBedragEditText"
            android:layout_toRightOf="@id/procentSeekBar"
            android:layout_alignBaseline="@id/procentLabel"
            android:text="@string/fooi_percentage"
            />

        <!-- fooi bedrag -->

        <TextView
            android:id="@+id/fooiLabel"
            style="@style/Label"
            android:layout_alignLeft="@+id/procentLabel"
            android:layout_below="@+id/procentLabel"
            android:text="@string/fooi_bedrag_label"
            />

        <TextView
            style="@style/TextView"
            android:id="@+id/fooiTextView"
            android:layout_alignBaseline="@+id/fooiLabel"
            android:layout_alignLeft="@id/rekeningBedragEditText"
            android:text="@string/fooi_bedrag"
            />

        <!-- totaal bedrag -->

        <TextView
            style="@style/Label"
            android:id="@+id/totaalLabel"
            android:layout_alignLeft="@+id/fooiLabel"
            android:layout_below="@+id/fooiLabel"
            android:text="@string/totaal_bedrag_label"
            />

        <TextView
            style="@style/TextView"
            android:id="@+id/totaalTextView"
            android:layout_alignBaseline="@+id/totaalLabel"
            android:layout_alignLeft="@+id/fooiTextView"
            android:text="@string/totaal_bedrag" />
        <!--android:textSize="20sp"-->

        <!-- de scheidingslijn -->

        <View
            android:id="@+id/scheidslijn"
            android:layout_alignLeft="@+id/totaalLabel"
            android:layout_below="@+id/totaalLabel"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="@android:color/black" />

        <!--afronding-->

        <TextView
            style="@style/Label"
            android:id="@+id/afrondLabel"
            android:layout_alignLeft="@+id/scheidslijn"
            android:layout_below="@+id/scheidslijn"
            android:text="@string/afronding_label" />

        <RadioGroup
            android:id="@+id/afrondingRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scheidslijn"
            android:layout_toRightOf="@+id/afrondLabel"
            android:layout_alignLeft="@id/totaalTextView">

            <RadioButton
                android:id="@+id/geenAfrondingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/geen_afronding" />

            <RadioButton
                android:id="@+id/fooiAfrondingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fooi_afronding" />

            <RadioButton
                android:id="@+id/totaalAfrondingRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totaal_afronding" />
        </RadioGroup>

        <TextView
            style="@style/Label"
            android:id="@+id/delenLabel"
            android:text="@string/delen_label"
            android:layout_below="@+id/afrondingRadioGroup"
            android:layout_alignStart="@id/afrondLabel"
            android:layout_alignLeft="@id/afrondLabel" />

        <Spinner
            android:id="@+id/delenSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/afrondingRadioGroup"
            android:layout_toRightOf="@id/delenLabel"
            android:layout_alignTop="@id/delenLabel"
            android:layout_alignLeft="@id/afrondingRadioGroup"/>

        <TextView
            style="@style/Label"
            android:id="@+id/perPersoonLabel"
            android:layout_alignLeft="@+id/delenLabel"
            android:layout_below="@+id/delenSpinner"
            android:text="@string/delen_per_persoon" />

        <TextView
            style="@style/TextView"
            android:id="@+id/bedragPerPersoonTextView"
            android:layout_below="@+id/delenSpinner"
            android:layout_toRightOf="@id/perPersoonLabel"
            android:layout_alignBaseline="@+id/perPersoonLabel"
            android:text="@string/bedrag_per_persoon" />

        <!--<Button-->
        <!--android:id="@+id/berekenButton"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="center"-->
        <!--android:text="@string/pas_toe_knop"-->
        <!--android:layout_below="@id/bedragPerPersoonTextView"-->
        <!--android:layout_marginTop="30dp"  />-->


    </RelativeLayout>


</ScrollView>